FIX for safari on mobile device in header

--- a/src/styles/sass/layout/_header.scss
+++ b/src/styles/sass/layout/_header.scss
@@ -13,7 +13,7 @@
   /* positioning to relative because child logo-box is set to absolute */
   position: relative;
 
-  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+  @media (min-resolution: 192dpi) and (min-width: 37.5em), (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), (min-width: 125em) {
 
     background-image: linear-gradient(
       to right bottom,
